gradle runR working