@@ -39,6 +39,36 @@ dependencies {
 
 }
 
+sourceSets {
+  main {
+    java {
+      setSrcDirs(listOf("src/main/java"))
+    }
+    resources {
+      setSrcDirs(listOf("src/main/resources"))
+    }
+  }
+}
+
+
+
+// TASKS:
 tasks.test {
   useJUnitPlatform()
+}
+
+tasks.named<Jar>("jar") {
+  manifest {
+    attributes["Main-Class"] = "it.unicam.cs.App"
+  }
+}
+
+tasks.register<JavaExec>("runR") {
+  group = "application"
+  description = "Runs the application"
+  classpath = sourceSets["main"].runtimeClasspath
+  mainClass.set(application.mainClass)
+  jvmArgs = listOf("--module-path", classpath.asPath, "--add-modules", "javafx.controls,javafx.fxml")
+  workingDir = projectDir // Ensures the working directory is set to the project directory
+  args = listOf() // If you need to pass arguments, add them here
 }
